--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -152,7 +152,7 @@
     <ClInclude Include="Sound.h" />
     <ClInclude Include="SoundEffect.h" />
     <ClInclude Include="Vec2.h" />
-    <ClInclude Include="Vertex.h" />
+    <ClInclude Include="Edge.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="COMInitializer.cpp" />
