--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -140,6 +140,7 @@
     <ClInclude Include="ChiliWin.h" />
     <ClInclude Include="Colors.h" />
     <ClInclude Include="COMInitializer.h" />
+    <ClInclude Include="ConvexRegularPolygon.h" />
     <ClInclude Include="CoordinateSystemSwitcher.h" />
     <ClInclude Include="DXErr.h" />
     <ClInclude Include="Game.h" />
