--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Sound.h" />
     <ClInclude Include="SoundEffect.h" />
+    <ClInclude Include="Star.h" />
     <ClInclude Include="Vec2.h" />
     <ClInclude Include="Edge.h" />
   </ItemGroup>
