--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -136,6 +136,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Animation.h" />
+    <ClInclude Include="Animator.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="ChiliException.h" />
     <ClInclude Include="ChiliWin.h" />
@@ -145,6 +147,7 @@
     <ClInclude Include="CoordinateSystemSwitcher.h" />
     <ClInclude Include="Drawable.h" />
     <ClInclude Include="DXErr.h" />
+    <ClInclude Include="FrameTimer.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GeometricObject.h" />
     <ClInclude Include="Graphics.h" />
@@ -157,6 +160,7 @@
     <ClInclude Include="Star.h" />
     <ClInclude Include="Vec2.h" />
     <ClInclude Include="Edge.h" />
+    <ClInclude Include="ZoomAnimation.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="COMInitializer.cpp" />
